updated the workflow yaml file

--- a/.github/workflows/terraform-cloudflare.yml
+++ b/.github/workflows/terraform-cloudflare.yml
@@ -72,9 +72,7 @@ jobs:
 
       - name: Terraform Apply
         if: |
-          github.ref == 'refs/heads/main' && 
-          github.event_name == 'push' && 
-          steps.plan.outcome == 'success' && 
-          steps.validate.outcome == 'success' &&
-          steps.plan.outputs.exitcode == '2'
+          steps.plan.outcome == 'success' &&
+          steps.validate.outcome == 'success'
         run: terraform apply -auto-approve -input=false tfplan.out
+
